@@ -8,7 +8,7 @@ Forwarded: yes
 
 --- a/Lib/ctypes/util.py
 +++ b/Lib/ctypes/util.py
-@@ -272,16 +272,27 @@ elif os.name == "posix":
+@@ -281,16 +281,27 @@ elif os.name == "posix":
  
          def _findSoname_ldconfig(name):
              import struct
