@@ -3,7 +3,7 @@ Forwarded: not-needed
 
 --- a/Lib/pydoc.py
 +++ b/Lib/pydoc.py
-@@ -31,6 +31,10 @@
+@@ -31,6 +31,10 @@ to a file named "<name>.html".
  
  Module docs for core modules are assumed to be in
  
@@ -16,7 +16,7 @@ Forwarded: not-needed
  This can be overridden by setting the PYTHONDOCS environment variable
 --- a/Misc/python.man
 +++ b/Misc/python.man
-@@ -425,7 +425,7 @@
+@@ -425,7 +425,7 @@ exception).  Error messages are written
  These are subject to difference depending on local installation
  conventions; ${prefix} and ${exec_prefix} are installation-dependent
  and should be interpreted as for GNU software; they may be the same.
