@@ -9,7 +9,7 @@ Forwarded: not-needed
 
 --- a/Lib/gettext.py
 +++ b/Lib/gettext.py
-@@ -504,11 +504,26 @@ def find(domain, localedir=None, languag
+@@ -513,11 +513,26 @@ def find(domain, localedir=None, languag
          if lang == 'C':
              break
          mofile = os.path.join(localedir, lang, 'LC_MESSAGES', '%s.mo' % domain)
