@@ -6,7 +6,7 @@ Forwarded: no
 
 --- a/Lib/pydoc.py
 +++ b/Lib/pydoc.py
-@@ -1584,6 +1584,8 @@ def getpager():
+@@ -1670,6 +1670,8 @@ def getpager():
          return plainpager
      if sys.platform == 'win32':
          return lambda text: tempfilepager(plain(text), 'more <')
