@@ -6,7 +6,7 @@ Origin: upstream, https://github.com/python/cpython/commit/423e77d6de497931585d1
 
 --- a/Doc/conf.py
 +++ b/Doc/conf.py
-@@ -280,6 +280,10 @@ gettext_additional_targets = [
+@@ -303,6 +303,10 @@ gettext_additional_targets = [
      'index',
  ]
  
