@@ -6,7 +6,7 @@ Forwarded: not-needed
 
 --- a/Lib/tkinter/__init__.py
 +++ b/Lib/tkinter/__init__.py
-@@ -35,7 +35,10 @@
+@@ -35,7 +35,10 @@ import enum
  import sys
  import types
  
